# whatsupper_bot

./: Cargo.toml  readme.md  receive_request.rs
src/: keyboards.rs  main.rs  replics.rs  utils.rs
src/dialogue/: dishes.rs  mod.rs
src/dialogue/states/: dish_suggested.rs  ingredient_choosing.rs  menu_showed.rs  mod.rs  receive_request.rs  start.rs
