[package]
name = "what_supper_bot"
version = "0.1.0"
authors = ["filbert42"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.4", features = ["frunk", "macros", "auto-send"] }
futures = "0.3.5"
tokio = { version =  "1.3.0", features = ["rt-multi-thread", "macros"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand =  "0.8.3"
log = "0.4.8"
pretty_env_logger = "0.4.0"
derive_more = "0.99.9"

frunk = "0.3.1"
frunk_core = "0.3.1"
